# forum

./: README.md  pyproject.toml  run-dev  run-dev.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
forum/forum/: settings.py  urls.py
forum/forum_core/: admin.py  forms.py  models.py  urls.py  views.py  widgets.py
forum/forum_core/forms/: auth.py  settings.py  topic.py
forum/forum_core/migrations/: 0004_reply_delete_post.py  0005_userprofile.py  0006_alter_userprofile_user.py
forum/forum_core/models/: __init__.py  settings.py  topic.py
forum/forum_core/services/: upload.py
forum/forum_core/static/css/: global.css
forum/forum_core/templates/: base.html  base_logged.html  list_topics.html  topic.html
forum/forum_core/templates/auth/: login.html  register.html
forum/forum_core/templates/settings/: index.html
forum/forum_core/templates/topic/: create_topic.html  list_topics.html  topic.html
forum/forum_core/templates/widgets/: pagination.html
forum/forum_core/templates/widgets/forms/: section_form.html
forum/forum_core/templates/widgets/inputs/: image-upload-input.html
forum/forum_core/views/: auth.py  settings.py  topic.py
forum/forum_core/widgets/: forms.py  inputs.py  pagination.py  titles.py
forum/theme/static_src/: tailwind.config.js
forum/theme/static_src/src/: styles.css
forum_core/: apps.py  models.py  urls.py
forum_core/migrations/: 0001_initial.py  0002_post_created_at_post_creator_post_deleted_at_and_more.py  0003_alter_post_deleted_at_alter_topic_deleted_at.py
(+2 files in other folders)
