[tool.poetry]
name = "forum"
version = "0.1.0"
description = ""
authors = ["Lee Jun <alex.leejun@zrp.com.br>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.4"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
django-tailwind = {extras = ["reload"], version = "^3.8.0"}
boto3 = "^1.34.98"
botocore = "^1.34.98"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
